# vastai-mcp

./: pyproject.toml  requirements.txt  server.py
